@@ -1,5 +1,3 @@
-DIST ibus-anthy-0.1.1.20080901.tar.gz 386225 RMD160 b59c6f6bc89f2d6a41bcb4a401e5c7455e81aa4e SHA1 d83cbfab4367b9130319ce6498b71c0cfb4eccae SHA256 286d82fbabe54698899b7a62f325f7da927cd43f1c722bf2d655511710042d71
-EBUILD ibus-anthy-0.1.1.20080901.ebuild 966 RMD160 526a5f10f16f02f09ac1d1a6d980ad315a3729e5 SHA1 bf86af21a63ddbb6ac7bbcf02c2ea59841e2744c SHA256 ce0208e07fcc68b257f61d759bc7f4fd910205864bdcc4f68d1bcccf66f30b43
 EBUILD ibus-anthy-9999.ebuild 1126 RMD160 7b245691c66da0ba8ca9112f1d446004135c5e26 SHA1 422cbc8e1e4f0007ef539f48095e18fd2291a9a5 SHA256 bcb778ae79e7f4f9837bf6db5a30b92f2d698e5101391b0eabc521866790d561
-MISC ChangeLog 266 RMD160 d547d4cd9847df6fa4cc1b3444f337fe9e36d84d SHA1 9922850057276dc852cdea0026b97b1f24ec7f1d SHA256 d5d5aa933efdb605c7344f8a58b90ae939f5064fbaa31fe55063403b69df30a6
+MISC ChangeLog 386 RMD160 fa3da0bbd40422132b4aa96edad34f01bd57e3f8 SHA1 c7d5bcf2ddf3638319223c6e99e27a3b0c1fb847 SHA256 caff85ce81b0328d077b99729bd7ade8b0d4a0aed59f7b9cd6fe20f0dd8f332e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
