@@ -1,39 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-DESCRIPTION="Japanese input method Anthy IMEngine for IBus Framework"
-HOMEPAGE="http://ibus.googlecode.com"
-SRC_URI="http://ibus.googlecode.com/files/${P}.tar.gz"
-
-LICENSE="LGPL-2"
-SLOT="0"
-KEYWORDS="~x86"
-IUSE="nls"
-
-DEPEND="app-i18n/anthy
-	>=dev-lang/python-2.5
-	dev-lang/swig
-	nls? ( sys-devel/gettext )"
-RDEPEND="app-i18n/ibus
-	app-i18n/anthy
-	>=dev-lang/python-2.5"
-
-src_compile() {
-	econf $(use_enable nls) \
-		--enable-maintainer-mode \
-		--disable-option-checking \
-		--disable-rpath
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake install DESTDIR="${D}" || die "Install failed"
-	dodoc AUTHORS ChangeLog NEWS README
-}
-
-pkg_postinst() {
-	ewarn "This package is very experimental, please report your bugs to"
-	ewarn "http://ibus.googlecode.com/issues/list"
-	elog "You should run ibus-setup and enable IM Engines you want to use."
-}
