@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Sep 2008; Hong Hao <oahong@gmail.com>
+  -ibus-anthy-0.1.1.20080901.ebuild:
+  We have snapshot in portage, drop it
+
   02 Sep 2008; Hong Hao <oahong@gmail.com>
   +ibus-anthy-0.1.1.20080901.ebuild, +ibus-anthy-9999.ebuild, +metadata.xml:
   Ebuild for bug #236368
